@@ -1,3 +1,13 @@
+2013-05-16  Luis Machado  <lgustavo@codesourcery.com>
+
+	* linux-low.c: Move definition checks upwards for PT_TEXT_ADDR,
+	PT_DATA_ADDR and PT_TEXT_END_ADDR.  Update comments.
+	(linux_read_offsets): Remove PT_TEXT_ADDR, PT_DATA_ADDR and
+	PT_TEXT_END_ADDR guards.  Update comments.
+	(linux_target_op) <read_offsets>: Conditionally define to
+	linux_read_offsets if the target is UCLIBC and if it defines
+	PT_TEXT_ADDR, PT_DATA_ADDR and PT_TEXT_END_ADDR.
+
 2013-05-06  Sandra Loosemore  <sandra@codesourcery.com>
 	    Andrew Jenner  <andrew@codesourcery.com>
 
